<resources>
    <string name="app_name" translatable="false">Decision Game</string>
    <string name="logoPic" translatable="false">logoPic</string>
    <string name="choose_your_game" translatable="false">Choose Your Game</string>
    <string name="knowledgepic" translatable="false">knowledgepic</string>
    <string name="molahzapic" translatable="false">molahzapic</string>
    <string name="instructionsTitle1" translatable="false">Welcome Dear</string>
    <string name="instructions1" translatable="false">Choose one of the four choices below And Start The Game</string>
    <string name="instructions2" translatable="false">The Game is divided into four levels each level has three questions</string>
    <string name="instructions3" translatable="false">Look at the picture displayed and answer the questions</string>
    <string name="instructions4" translatable="false">The Game is divided into four levels</string>
    <string name="start_the_game" translatable="false">Start The Game</string>
    <string name="start" translatable="false">Start</string>
    <string name="back" translatable="false">Back</string>
    <string name="sports" translatable="false">sports</string>
    <string name="geography" translatable="false">geography</string>
    <string name="sciences" translatable="false">sciences</string>
    <string name="history" translatable="false">history</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="startbutton" translatable="false">startButton</string>
    <string name="textview" translatable="false">TextView</string>
    <string name="textview2" translatable="false">TextView</string>
    <string name="textview3" translatable="false">TextView</string>
    <string name="go_next" translatable="false"> GO NEXT </string>
    <string name="Q1LV1Sports" translatable="false">Q1: Brazil won the World Cup 5 times until the 2002 World Cup and the years were: </string>
    <string name="Q2LV1Sports" translatable="false">Q2: How many personal mistakes can a basketball player make before being kicked off the court? </string>
    <string name="Q3LV1Sports" translatable="false">Q3: How many players is one baseball team?</string>
    <string name="S1C1LV1Sports" translatable="false"> ( 1958-1962-1970-1994-2002 )</string>
    <string name="S1C2LV1Sports" translatable="false"> ( 1954-1962-1970-1994-2002 )</string>
    <string name="S1C3LV1Sports" translatable="false"> ( 1958-1962-1970-1998-2002 )</string>
    <string name="S2C1LV1Sports" translatable="false">6 Mistakes </string>
    <string name="S2C2LV1Sports" translatable="false">7 Mistakes </string>
    <string name="S2C3LV1Sports" translatable="false">5 Mistakes </string>
    <string name="S3C1LV1Sports" translatable="false">8 Players </string>
    <string name="S3C2LV1Sports" translatable="false">9 Players </string>
    <string name="S3C3LV1Sports" translatable="false">10 Players </string>
    <string name="Q1LV2Sports" translatable="false">Q1: What was the first African country to qualify for the World Cup? </string>
    <string name="Q2LV2Sports" translatable="false">Q2: What is the only country that has participated in playing in every FIFA World Cup? </string>
    <string name="Q3LV2Sports" translatable="false">Q3: What is the record for red cards per football match? </string>
    <string name="S1C1LV2Sports" translatable="false"> Algeria </string>
    <string name="S1C2LV2Sports" translatable="false"> Senegal </string>
    <string name="S1C3LV2Sports" translatable="false"> Egypt </string>
    <string name="S2C1LV2Sports" translatable="false"> Brazil </string>
    <string name="S2C2LV2Sports" translatable="false"> German </string>
    <string name="S2C3LV2Sports" translatable="false"> Argentina </string>
    <string name="S3C1LV2Sports" translatable="false"> 10 </string>
    <string name="S3C2LV2Sports" translatable="false"> 36 </string>
    <string name="S3C3LV2Sports" translatable="false"> 6 </string>
    <string name="Q1LV3Sports" translatable="false">Q1: The hand ball team consists of: </string>
    <string name="Q2LV3Sports" translatable="false">Q2: The Olympic Games that the Arabs boycotted are: </string>
    <string name="Q3LV3Sports" translatable="false">Q3: Yellow and red cards appeared at the World Cup in: </string>
    <string name="S1C1LV3Sports" translatable="false"> 12 </string>
    <string name="S1C2LV3Sports" translatable="false"> 11 </string>
    <string name="S1C3LV3Sports" translatable="false"> 10 </string>
    <string name="S2C1LV3Sports" translatable="false"> China </string>
    <string name="S2C2LV3Sports" translatable="false"> Switzerland </string>
    <string name="S2C3LV3Sports" translatable="false"> Moscow </string>
    <string name="S3C1LV3Sports" translatable="false"> 1971 </string>
    <string name="S3C2LV3Sports" translatable="false"> 1970 </string>
    <string name="S3C3LV3Sports" translatable="false"> 1972 </string>
    <string name="Q1LV1History" translatable="false">Q1: In which city did you find one of the wonders of the ancient world, the "Hanging Gardens"? </string>
    <string name="Q2LV1History" translatable="false">Q2: What year did Hitler commit suicide? </string>
    <string name="Q3LV1History" translatable="false">Q3: How many days of the week in ancient Roman times? </string>
    <string name="S1C1LV1History" translatable="false"> Babylon </string>
    <string name="S1C2LV1History" translatable="false"> Basra </string>
    <string name="S1C3LV1History" translatable="false"> Milan </string>
    <string name="S2C1LV1History" translatable="false"> 1945 </string>
    <string name="S2C2LV1History" translatable="false"> 1946 </string>
    <string name="S2C3LV1History" translatable="false"> 1947 </string>
    <string name="S3C1LV1History" translatable="false"> 8 </string>
    <string name="S3C2LV1History" translatable="false"> 9 </string>
    <string name="S3C3LV1History" translatable="false"> 10 </string>
    <string name="Q1LV2History" translatable="false">Q1: What was the first battle in Islamic history? </string>
    <string name="Q2LV2History" translatable="false">Q2: Who is the third Rightly-Guided Caliph? </string>
    <string name="Q3LV2History" translatable="false">Q3: Who is the Ottoman prince, conqueror of Constantinople? </string>
    <string name="S1C1LV2History" translatable="false"> Badr </string>
    <string name="S1C2LV2History" translatable="false"> Ohd </string>
    <string name="S1C3LV2History" translatable="false"> Khandaq </string>
    <string name="S2C1LV2History" translatable="false"> Umar ibn al-Khattab </string>
    <string name="S2C2LV2History" translatable="false"> Ali ibn Abi-Taleb </string>
    <string name="S2C3LV2History" translatable="false"> Uthman ibn Affan </string>
    <string name="S3C1LV2History" translatable="false"> Sultan Mohamed Morad || </string>
    <string name="S3C2LV2History" translatable="false"> Sultan Mohamed Morad | </string>
    <string name="S3C3LV2History" translatable="false"> Sultan Mohamed Morad |V </string>
    <string name="Q1LV3History" translatable="false">Q1: When was the Year of the Elephant? </string>
    <string name="Q2LV3History" translatable="false">Q2: When was the Great Wall of China built? </string>
    <string name="Q3LV3History" translatable="false">Q3: What year did the Muslims conquer Jerusalem? </string>
    <string name="S1C1LV3History" translatable="false"> 565 AD </string>
    <string name="S1C2LV3History" translatable="false"> 570 AD </string>
    <string name="S1C3LV3History" translatable="false"> 575 AD </string>
    <string name="S2C1LV3History" translatable="false"> 215 BC </string>
    <string name="S2C2LV3History" translatable="false"> 200 BC </string>
    <string name="S2C3LV3History" translatable="false"> 200 AD </string>
    <string name="S3C1LV3History" translatable="false"> 650 AD </string>
    <string name="S3C2LV3History" translatable="false"> 600 AD </string>
    <string name="S3C3LV3History" translatable="false"> 637 AD </string>
    <string name="Q1LV1Sciences" translatable="false">Q1: What is the oldest type of science? </string>
    <string name="Q2LV1Sciences" translatable="false">Q2: How many teeth does a human mouth have? </string>
    <string name="Q3LV1Sciences" translatable="false">Q3: What is the rarest blood type? </string>
    <string name="S1C1LV1Sciences" translatable="false"> Mathematics </string>
    <string name="S1C2LV1Sciences" translatable="false"> Astronomy </string>
    <string name="S1C3LV1Sciences" translatable="false"> Biology </string>
    <string name="S2C1LV1Sciences" translatable="false"> 32 </string>
    <string name="S2C2LV1Sciences" translatable="false"> 33 </string>
    <string name="S2C3LV1Sciences" translatable="false"> 34 </string>
    <string name="S3C1LV1Sciences" translatable="false"> AB- </string>
    <string name="S3C2LV1Sciences" translatable="false"> AB+ </string>
    <string name="S3C3LV1Sciences" translatable="false"> O+ </string>
    <string name="Q1LV2Sciences" translatable="false">Q1: What is the hottest planet of the solar system? </string>
    <string name="Q2LV2Sciences" translatable="false">Q2: What is the law that states that "every action has an equal and opposite reaction"? </string>
    <string name="Q3LV2Sciences" translatable="false">Q3: What type of neutron charge is it? </string>
    <string name="S1C1LV2Sciences" translatable="false"> Mercury </string>
    <string name="S1C2LV2Sciences" translatable="false"> Venus </string>
    <string name="S1C3LV2Sciences" translatable="false"> Pluto </string>
    <string name="S2C1LV2Sciences" translatable="false"> Newton 1st Law </string>
    <string name="S2C2LV2Sciences" translatable="false"> Newton 3rd Law </string>
    <string name="S2C3LV2Sciences" translatable="false"> Newton 2nd Law </string>
    <string name="S3C1LV2Sciences" translatable="false"> Negative </string>
    <string name="S3C2LV2Sciences" translatable="false"> Positive </string>
    <string name="Q1LV3Sciences" translatable="false">Q1: The only organ in the human body that is able to grow if part of it is cut is: </string>
    <string name="Q2LV3Sciences" translatable="false">Q2: How many heart valves? </string>
    <string name="Q3LV3Sciences" translatable="false">Q3: How many legs does an ant have? </string>
    <string name="S1C1LV3Sciences" translatable="false"> Kidney </string>
    <string name="S1C2LV3Sciences" translatable="false"> Liver </string>
    <string name="S1C3LV3Sciences" translatable="false"> Pancreas </string>
    <string name="S2C1LV3Sciences" translatable="false"> 4 </string>
    <string name="S2C2LV3Sciences" translatable="false"> 3 </string>
    <string name="S2C3LV3Sciences" translatable="false"> 8 </string>
    <string name="S3C1LV3Sciences" translatable="false"> 8 </string>
    <string name="S3C2LV3Sciences" translatable="false"> 16 </string>
    <string name="S3C3LV3Sciences" translatable="false"> 4 </string>
    <string name="Q1LV1Geography" translatable="false">Q1: How many countries are there on the continent of Africa? </string>
    <string name="Q2LV1Geography" translatable="false">Q2:  What is the largest desert in the world? </string>
    <string name="Q3LV1Geography" translatable="false">Q3: Where is Mount Kilimanjaro? </string>
    <string name="S1C1LV1Geography" translatable="false"> 54 </string>
    <string name="S1C2LV1Geography" translatable="false"> 55 </string>
    <string name="S1C3LV1Geography" translatable="false"> 53 </string>
    <string name="S2C1LV1Geography" translatable="false"> Sahara Desert </string>
    <string name="S2C2LV1Geography" translatable="false"> Empty Quarter Desert </string>
    <string name="S2C3LV1Geography" translatable="false"> Australian Sahara </string>
    <string name="S3C1LV1Geography" translatable="false"> Asia </string>
    <string name="S3C2LV1Geography" translatable="false"> Africa </string>
    <string name="S3C3LV1Geography" translatable="false"> Europe </string>
</resources>