<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".GeographyLevel1Fragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.03" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.69" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.33" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.63" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.09" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.39" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.93" />

        <TextView
            android:id="@+id/tv1Lv1Geography"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#AFAFAF"
            android:text="@string/Q1LV1Geography"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="#020202"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline20"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <TextView
            android:id="@+id/tv2Lv1Geography"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#AFAFAF"
            android:text="@string/Q2LV1Geography"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline21"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="@+id/guideline6" />

        <TextView
            android:id="@+id/tv3Lv1Geography"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#AFAFAF"
            android:text="@string/Q3LV1Geography"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="@+id/guideline7" />

        <ImageView
            android:id="@+id/returnButtonLv1Geography"
            android:layout_width="52dp"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:background="#FFFCFD"
            android:contentDescription="@string/todo"
            android:src="@drawable/backbuttons"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="@+id/guideline22"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/goNextLv1Geography"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="#EC5C2E"
            android:text="@string/go_next"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline8"
            app:layout_constraintTop_toTopOf="@+id/guideline22"
            tools:ignore="TouchTargetSizeCheck" />


        <RadioGroup
            android:id="@+id/rGroup1Lv1Geography"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline6"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="@+id/guideline20">

            <RadioButton
                android:id="@+id/radioButton1Lv1Geography"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:text="@string/S1C1LV1Geography" />

            <RadioButton
                android:id="@+id/radioButton2Lv1Geography"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:text="@string/S1C2LV1Geography" />

            <RadioButton
                android:id="@+id/radioButton3Lv1Geography"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:text="@string/S1C3LV1Geography" />

        </RadioGroup>

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/rGroup2Lv1Geography"
            app:layout_constraintBottom_toTopOf="@+id/guideline7"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="@+id/guideline21" >

            <RadioButton
                android:id="@+id/radioButton4Lv1Geography"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:text="@string/S2C1LV1Geography" />

            <RadioButton
                android:id="@+id/radioButton5Lv1Geography"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:text="@string/S2C2LV1Geography" />

            <RadioButton
                android:id="@+id/radioButton6Lv1Geography"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:text="@string/S2C3LV1Geography" />

        </RadioGroup>

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/rGroup3Lv1Geography"
            app:layout_constraintBottom_toTopOf="@+id/guideline22"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="@+id/guideline3" >

            <RadioButton
                android:id="@+id/radioButton7Lv1Geography"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:text="@string/S3C1LV1Geography" />

            <RadioButton
                android:id="@+id/radioButton8Lv1Geography"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:text="@string/S3C2LV1Geography" />

            <RadioButton
                android:id="@+id/radioButton9Lv1Geography"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:text="@string/S3C3LV1Geography" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>